# sistema_cadastro_usuarios

./: README.md  pyproject.toml
cadastro_usuarios/: main.py  schemas.py
tests/: conftest.py  test_main.py
